[tool.poetry]
name = "pyspark_delta_utility"
version = "0.1.0"
description = "A useful python package that consists of pyspark and delta utilities"
authors = ["Kyle Ahn"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
databricks-connect = "9.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
